--- a/Earthquake_Challenge.ipynb
+++ b/Earthquake_Challenge.ipynb
@@ -703,6 +703,94 @@
     },
     {
       "metadata": {
+        "id": "NjiQ7ZKTQFlx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "2b856c16-df41-41b1-c3d0-63f1e44ae117"
+      },
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>acoustic_data</th>\n",
+              "      <th>time_to_failure</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>12</td>\n",
+              "      <td>1.4691</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>6</td>\n",
+              "      <td>1.4691</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>8</td>\n",
+              "      <td>1.4691</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1.4691</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>8</td>\n",
+              "      <td>1.4691</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   acoustic_data  time_to_failure\n",
+              "0             12           1.4691\n",
+              "1              6           1.4691\n",
+              "2              8           1.4691\n",
+              "3              5           1.4691\n",
+              "4              8           1.4691"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "OtK1gGWE2sTF",
         "colab_type": "code",
         "colab": {}
@@ -719,7 +807,8 @@
         "for df in train:\n",
         "    ch = gen_features(df['acoustic_data'])\n",
         "    X_train = X_train.append(ch, ignore_index=True)\n",
-        "    y_train = y_train.append(pd.Series(df['time_to_failure'].values[-1]))"
+        "#     y_train = y_train.append(pd.Series(df['time_to_failure'].values[-1]))\n",
+        "    y_train = y_train.append(df['time_to_failure'])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -809,7 +898,7 @@
       "metadata": {
         "id": "zUvIKHcA1JZ8",
         "colab_type": "code",
-        "outputId": "a9705ce1-cd08-47b6-a093-075aa46fde2e",
+        "outputId": "d90512df-0102-4b2e-bd37-a9217afdd3ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -824,7 +913,7 @@
         "m.fit(X_train, y_train, silent=True)\n",
         "m.best_score_"
       ],
-      "execution_count": 36,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +925,49 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "kBcbpLuQOdXy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 330
+        },
+        "outputId": "810f1ced-94f2-4876-c439-f195a4c5b3f9"
+      },
+      "cell_type": "code",
+      "source": [
+        "X_train.info()"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 4195 entries, 0 to 4194\n",
+            "Data columns (total 13 columns):\n",
+            "0     4195 non-null float64\n",
+            "1     4195 non-null float64\n",
+            "2     4195 non-null float64\n",
+            "3     4195 non-null float64\n",
+            "4     4195 non-null float64\n",
+            "5     4195 non-null float64\n",
+            "6     4195 non-null float64\n",
+            "7     4195 non-null float64\n",
+            "8     4195 non-null float64\n",
+            "9     4195 non-null float64\n",
+            "10    4195 non-null float64\n",
+            "11    4195 non-null float64\n",
+            "12    4195 non-null float64\n",
+            "dtypes: float64(13)\n",
+            "memory usage: 426.1 KB\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -881,45 +1012,114 @@
         "\n",
         "# test_pool = Pool(TEST_FILE) \n",
         "for df in test_data:\n",
-        "  z_test = z_test.append(pd.Series(df['acoustic_data']))"
+        "  z_test = z_test.append(df)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "FxkGGjrq1eho",
+        "id": "_fcBkWlZPnnN",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 1094
         },
-        "outputId": "78a0c9dd-e5d0-4bcb-f7db-56b877032b36"
+        "outputId": "7851727d-e71f-42b6-b42e-ca1410660ebf"
       },
       "cell_type": "code",
       "source": [
-        "z_test.head()"
+        "y_train"
       ],
-      "execution_count": 42,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    9\n",
-              "1    7\n",
-              "2    6\n",
-              "3    2\n",
-              "4    0\n",
-              "dtype: int16"
+              "0     1.430797\n",
+              "0     1.391499\n",
+              "0     1.353196\n",
+              "0     1.313798\n",
+              "0     1.274400\n",
+              "0     1.236097\n",
+              "0     1.196798\n",
+              "0     1.158496\n",
+              "0     1.119097\n",
+              "0     1.079699\n",
+              "0     1.041396\n",
+              "0     1.001998\n",
+              "0     0.962700\n",
+              "0     0.924397\n",
+              "0     0.884999\n",
+              "0     0.846696\n",
+              "0     0.807297\n",
+              "0     0.767999\n",
+              "0     0.729696\n",
+              "0     0.690298\n",
+              "0     0.650900\n",
+              "0     0.612597\n",
+              "0     0.573299\n",
+              "0     0.534996\n",
+              "0     0.495598\n",
+              "0     0.456199\n",
+              "0     0.417897\n",
+              "0     0.378498\n",
+              "0     0.339200\n",
+              "0     0.300897\n",
+              "       ...    \n",
+              "0    10.862098\n",
+              "0    10.822699\n",
+              "0    10.784397\n",
+              "0    10.744998\n",
+              "0    10.706696\n",
+              "0    10.667397\n",
+              "0    10.627999\n",
+              "0    10.589696\n",
+              "0    10.550298\n",
+              "0    10.511000\n",
+              "0    10.472697\n",
+              "0    10.433298\n",
+              "0    10.394996\n",
+              "0    10.355597\n",
+              "0    10.316299\n",
+              "0    10.277896\n",
+              "0    10.238598\n",
+              "0    10.199200\n",
+              "0    10.160897\n",
+              "0    10.121499\n",
+              "0    10.083196\n",
+              "0    10.043898\n",
+              "0    10.004499\n",
+              "0     9.966196\n",
+              "0     9.926798\n",
+              "0     9.887500\n",
+              "0     9.849197\n",
+              "0     9.809799\n",
+              "0     9.771496\n",
+              "0     9.759796\n",
+              "Length: 4195, dtype: float64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 76
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "FxkGGjrq1eho",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "z_test_new = z_test.drop(columns=0)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -927,9 +1127,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 619
+          "height": 636
         },
-        "outputId": "cdce1bf8-e79b-4e47-cf18-1b85aabe6987"
+        "outputId": "c47d1324-c262-4f9f-bf5b-7dcc781fa076"
       },
       "cell_type": "code",
       "source": [
@@ -942,9 +1142,10 @@
         "#    print(df.head(10))\n",
         "# # z_test.head(10)\n",
         "m.feature_names_\n",
-        "m.predict(z_test)"
+        "# m.predict(z_test['acoustic_data'])\n",
+        "m.predict(z_test_new)"
       ],
-      "execution_count": 43,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "error",
@@ -953,13 +1154,13 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mCatBoostError\u001b[0m                             Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-dd7af8ed8e2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_names_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-75-cb6bba29f664>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_names_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# m.predict(z_test['acoustic_data'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_test_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/catboost/core.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, data, ntree_start, ntree_end, thread_count, verbose)\u001b[0m\n\u001b[1;32m   2729\u001b[0m         \u001b[0mprediction\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2730\u001b[0m         \"\"\"\n\u001b[0;32m-> 2731\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"RawFormulaVal\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2732\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2733\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstaged_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_period\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/catboost/core.py\u001b[0m in \u001b[0;36m_predict\u001b[0;34m(self, data, prediction_type, ntree_start, ntree_end, thread_count, verbose)\u001b[0m\n\u001b[1;32m   1316\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mloss_function_type\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mloss_function_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'MultiClass'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mloss_function_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'MultiClassOneVsAll'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1317\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_base_predict_multi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1318\u001b[0;31m         \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_base_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1319\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprediction_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Probability'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1320\u001b[0m             \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/catboost/core.py\u001b[0m in \u001b[0;36m_base_predict\u001b[0;34m(self, pool, prediction_type, ntree_start, ntree_end, thread_count, verbose)\u001b[0m\n\u001b[1;32m    907\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    908\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_base_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 909\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_base_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    910\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    911\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_base_predict_multi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthread_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._base_predict\u001b[0;34m()\u001b[0m\n",
             "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._base_predict\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mCatBoostError\u001b[0m: catboost/libs/data_new/model_dataset_compatibility.cpp:143: Feature 1 is present in model but not in pool."
+            "\u001b[0;31mCatBoostError\u001b[0m: catboost/libs/data_new/model_dataset_compatibility.cpp:151: Feature acoustic_data from pool must be 0."
           ]
         }
       ]
